<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enterItem"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etItemID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/itemId"
                android:inputType="number"/>


            <EditText
                android:id="@+id/etItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/etItemID"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/etItemName"
                android:hint="@string/price"
                android:inputType="text" />

            <EditText
                android:id="@+id/etCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/etPrice"
                android:hint="@string/category"
                android:inputType="text" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/etCategory"
                android:hint="@string/description"
                android:inputType="text" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etDescription"
                android:layout_marginTop="32dp"
                android:text="@string/saveButton"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>