<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/personTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/personData"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/personTitle"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/name"
                android:inputType="text"/>


            <EditText
                android:id="@+id/etPersonFamily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/etPersonName"
                android:hint="@string/family"
                android:inputType="text" />

            <EditText
                android:id="@+id/etPersonPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/etPersonFamily"
                android:hint="@string/phone"
                android:inputType="text" />

            <EditText
                android:id="@+id/etPersonBD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/etPersonPhone"
                android:hint="@string/birthday"
                android:inputType="text" />

            <EditText
                android:id="@+id/etPersonEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/etPersonBD"
                android:hint="@string/email"
                android:inputType="text" />

            <Button
                android:id="@+id/finsihPersonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPersonEmail"
                android:layout_marginTop="32dp"
                android:text="@string/finishButton"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>