<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/selectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/selectItem"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSelectCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/selectTitle"
                android:hint="@string/category"
                android:inputType="text" />

            <Button
                android:id="@+id/saveSelectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etSelectCategory"
                android:layout_marginTop="32dp"
                android:text="@string/select"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>