<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Details.DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/detailId"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemId"
                app:layout_constraintStart_toEndOf="@+id/tvDetailId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailName"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintStart_toEndOf="@+id/tvDetailName"
                app:layout_constraintTop_toBottomOf="@id/detailId" />

            <TextView
                android:id="@+id/detailPrice"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                app:layout_constraintStart_toEndOf="@+id/tvDetailPrice"
                app:layout_constraintTop_toBottomOf="@id/detailName" />

            <TextView
                android:id="@+id/detailCategory"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                app:layout_constraintStart_toEndOf="@+id/tvDetailCategory"
                app:layout_constraintTop_toBottomOf="@id/detailPrice" />

            <TextView
                android:id="@+id/detailDate"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                app:layout_constraintStart_toEndOf="@+id/tvDetailDate"
                app:layout_constraintTop_toBottomOf="@id/detailCategory" />

            <TextView
                android:id="@+id/detailDescription"
                style="@style/DetailsDescriptionStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvDetailDescription"
                app:layout_constraintTop_toBottomOf="@id/detailDate" />

            <TextView
                android:id="@+id/tvDetailId"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/itemId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailName"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintStart_toStartOf="@+id/tvDetailId"
                app:layout_constraintTop_toBottomOf="@id/tvDetailId" />

            <TextView
                android:id="@+id/tvDetailPrice"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                app:layout_constraintStart_toStartOf="@+id/tvDetailName"
                app:layout_constraintTop_toBottomOf="@id/tvDetailName" />

            <TextView
                android:id="@+id/tvDetailCategory"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                app:layout_constraintStart_toStartOf="@+id/tvDetailPrice"
                app:layout_constraintTop_toBottomOf="@id/tvDetailPrice" />

            <TextView
                android:id="@+id/tvDetailDate"
                style="@style/DetailsDescriptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:layout_constraintStart_toStartOf="@+id/tvDetailCategory"
                app:layout_constraintTop_toBottomOf="@id/tvDetailCategory" />

            <TextView
                android:id="@+id/tvDetailDescription"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:layout_constraintStart_toStartOf="@+id/tvDetailDate"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>