<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/cellId"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tvCellId"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="-4dp"
                android:layout_toEndOf="@+id/tvCellId"
                android:text="@string/itemId" />

            <TextView
                android:id="@+id/cellName"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cellId"
                android:layout_marginStart="3dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/tvCellName"
                android:text="@string/name" />

            <TextView
                android:id="@+id/cellPrice"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cellName"
                android:layout_marginStart="3dp"
                android:layout_marginTop="-1dp"
                android:layout_toEndOf="@+id/tvCellPrice"
                android:text="@string/price" />

            <TextView
                android:id="@+id/cellCategory"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cellPrice"
                android:layout_marginStart="3dp"
                android:layout_marginTop="-1dp"
                android:layout_toEndOf="@+id/tvCellCategory"
                android:text="@string/category" />

            <TextView
                android:id="@+id/cellDescription"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cellCategory"
                android:layout_marginStart="3dp"
                android:layout_marginTop="-1dp"
                android:layout_toEndOf="@+id/tvCellDescription"
                android:text="@string/description" />

            <TextView
                android:id="@+id/cellDate"
                style="@style/AllStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cellDescription"
                android:layout_marginStart="3dp"
                android:layout_marginTop="-3dp"
                android:layout_toEndOf="@+id/tvCellDate"
                android:text="@string/date" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCellDate"
                android:layout_alignParentStart="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="15dp"

                    android:background="@android:drawable/ic_menu_delete" />

                <Button
                    android:id="@+id/addToCartButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/baseline_shopping_cart_24" />
            </TableRow>

            <TextView
                android:id="@+id/tvCellId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="3dp"
                android:text="@string/itemId" />

            <TextView
                android:id="@+id/tvCellName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCellId"
                android:layout_alignParentStart="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvCellPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCellName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/tvCellCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCellPrice"
                android:layout_alignParentStart="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:text="@string/category" />

            <TextView
                android:id="@+id/tvCellDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCellCategory"
                android:layout_alignParentStart="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/tvCellDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCellDescription"
                android:layout_alignParentStart="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:text="@string/date" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>