<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Main.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/float_action_color"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/white"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="SpeakableTextPresentCheck">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShopCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/expandButtons"
        android:tint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/expandButtons"
        android:tint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fabShopCart"
        app:layout_constraintEnd_toEndOf="@+id/fabShopCart"
        app:srcCompat="@drawable/ic_baseline_checklist_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/expandButtons"
        android:tint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fabList"
        app:layout_constraintEnd_toEndOf="@+id/fabList"
        app:srcCompat="@drawable/ic_baseline_exposure_plus_1_24" />

    <Button
        android:background="@drawable/ticket_style"
        android:textSize="9sp"
        android:id="@+id/tvShopCart"
        android:layout_width="89dp"
        android:layout_height="55dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="120dp"
        android:text="@string/shopCart"
        android:clickable="false"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fabShopCart" />

    <Button
        android:background="@drawable/ticket_style"
        android:textSize="9sp"
        android:id="@+id/tvListOfProducts"
        android:layout_width="89dp"
        android:layout_height="55dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/listOfProducts"
        android:clickable="false"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvShopCart"
        app:layout_constraintEnd_toStartOf="@+id/fabShopCart" />

    <Button
        android:background="@drawable/ticket_style"
        android:textSize="9sp"
        android:id="@+id/tvAddProduct"
        android:layout_width="89dp"
        android:layout_height="55dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/addProduct"
        android:clickable="false"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvListOfProducts"
        app:layout_constraintEnd_toStartOf="@+id/fabShopCart" />

</androidx.constraintlayout.widget.ConstraintLayout>